[gd_scene load_steps=8 format=3 uid="uid://dveccj1no4bn"]

[ext_resource type="Script" path="res://Popups/popup.gd" id="1_5stks"]
[ext_resource type="Texture2D" uid="uid://cupac0dnrbo7q" path="res://Temp Images/Neliö3.png" id="2_6y24i"]
[ext_resource type="Texture2D" uid="uid://cshctsjtpr2sm" path="res://Temp Images/myson.jpg" id="3_j0kfm"]
[ext_resource type="Texture2D" uid="uid://cq6uurxnnwi7h" path="res://Popups/cross.png" id="4_pv3lm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trab5"]
size = Vector2(189, 178.5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i0jas"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5dvof"]

[node name="Popup" type="Node2D"]
script = ExtResource("1_5stks")

[node name="Popup holder" type="Area2D" parent="."]

[node name="Popup border" type="CollisionShape2D" parent="Popup holder"]
shape = SubResource("RectangleShape2D_trab5")

[node name="Neliö3" type="Sprite2D" parent="Popup holder/Popup border"]
position = Vector2(2.5, 0.750001)
scale = Vector2(0.26458, 0.26458)
texture = ExtResource("2_6y24i")

[node name="Neliö4" type="Sprite2D" parent="Popup holder/Popup border/Neliö3"]
scale = Vector2(1.07879, 1.07879)
texture = ExtResource("3_j0kfm")

[node name="Drag area" type="Button" parent="Popup holder/Popup border"]
offset_left = -76.0
offset_top = -78.0
offset_right = 81.0
offset_bottom = -53.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_i0jas")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_i0jas")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_i0jas")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_i0jas")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_i0jas")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_i0jas")
theme_override_styles/hover = SubResource("StyleBoxEmpty_i0jas")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_i0jas")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_i0jas")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_i0jas")
theme_override_styles/normal = SubResource("StyleBoxEmpty_i0jas")

[node name="X button" type="Button" parent="Popup holder/Popup border"]
offset_left = 55.41
offset_top = -74.0
offset_right = 75.41
offset_bottom = -54.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_5dvof")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_5dvof")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5dvof")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_5dvof")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_5dvof")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5dvof")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5dvof")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_5dvof")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5dvof")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_5dvof")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5dvof")
icon = ExtResource("4_pv3lm")
expand_icon = true

[connection signal="button_down" from="Popup holder/Popup border/Drag area" to="." method="_on_drag_area_button_down"]
[connection signal="button_up" from="Popup holder/Popup border/Drag area" to="." method="_on_drag_area_button_up"]
[connection signal="button_down" from="Popup holder/Popup border/X button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="Popup holder/Popup border/X button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Popup holder/Popup border/X button" to="." method="_on_x_button_pressed"]
